Fix opacity in dark mode

--- a/src/theme/dark.scss
+++ b/src/theme/dark.scss
@@ -58,6 +58,22 @@
     transition: background-color, color, 250ms cubic-bezier(0, 0, 0.3, 0.3) !important;
   }
 
+  // TODO: Remove text opacity from default styles
+  page-bitpay-card ion-title .toolbar-title,
+  .wallet-details-header ion-title .toolbar-title,
+  page-copayers .copayers-header-content .text,
+  page-finish .container .content .body-comment,
+  page-home .total-amount-container .average-container .date,
+  page-scan .page-scan-has-problems .header-container .subtitle,
+  page-addressbook .zero-state-description,
+  page-wallet-details .balance-alt-str,
+  page-wallet-details .balance-spendable,
+  page-wallet-details .tx-history .date,
+  .bp-list .secondary-label,
+  .bp-list .secondary-note {
+    opacity: 1;
+  }
+
   page-settings {
     .content {
       @include transition();
